prusti-tests/tests/parse/ui/simple_forall.stderr
error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> $DIR/simple_forall.rs:9:23
  |
9 | #[requires(forall(|x: 32, y: usize| x > 0 ==> x > -1, triggers=[]))]
  |                       ^^

error: expected parenthesized expression after quantifier
  --> $DIR/simple_forall.rs:12:12
   |
12 | #[requires(forall)]
   |            ^^^^^^

error: aborting due to 2 previous errors

